--- a/ie18n/languages/woocommerce-smart-subscription-ru_RU.po
+++ b/ie18n/languages/woocommerce-smart-subscription-ru_RU.po
@@ -3,11 +3,12 @@ msgstr ""
 "Project-Id-Version: WooCommerce Smart Subscription\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: Mon Nov 21 2016 13:21:32 GMT+0200 (EET)\n"
-"PO-Revision-Date: Mon Nov 21 2016 18:44:11 GMT+0200 (EET)\n"
+"PO-Revision-Date: Mon Nov 21 2016 18:44:28 GMT+0200 (EET)\n"
 "Last-Translator: bigtonni <shandm85@gmail.com>\n"
 "Language-Team: \n"
-"Language: English\n"
-"Plural-Forms: nplurals=2; plural=n != 1\n"
+"Language: Russian\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10 >= 2 && "
+"n%10<=4 &&(n%100<10||n%100 >= 20)? 1 : 2)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,7 +21,7 @@ msgstr ""
 "esc_attr__:1;esc_html__:1;esc_attr_e:1;esc_html_e:1;esc_attr_x:1,2c;"
 "esc_html_x:1,2c;comments_number_link:2,3;t:1;st:1;trans:1;transChoice:1,2\n"
 "X-Generator: Loco - https://localise.biz/\n"
-"X-Loco-Target-Locale: en_US"
+"X-Loco-Target-Locale: ru_RU"
 
 #. Name of the plugin
 msgid "WooCommerce Smart Subscription"
@@ -48,10 +49,6 @@ msgid ""
 "%1$sWooCommerce Smart Subscription is inactive.%2$s The %3$sWooCommerce%4$s "
 "and %5$sWooCommerce Subscriptions%6$s plugins must be active for WooCommerce "
 "Smart Subscription to work. Please install & activate WooCommerce &raquo;"
-msgstr ""
-
-#: ../../woocommerce-smart-subscription.php:127
-msgid "By "
 msgstr ""
 
 #: ../../includes/class-wss-checkout.php:33
@@ -93,3 +90,7 @@ msgstr ""
 #: ../../includes/class-wss-checkout.php:96
 msgid "YYYY-MM-DD"
 msgstr ""
+
+#: ../../woocommerce-smart-subscription.php:127
+msgid "By "
+msgstr "Автор:"
